--- a/AirQuality - Copia/app/src/main/res/values/strings.xml
+++ b/AirQuality - Copia/app/src/main/res/values/strings.xml
@@ -31,4 +31,15 @@
     <string name="no2">NO2</string>
     <string name="co">CO</string>
     <string name="aqi">AQI :</string>
+    <string name="error_email">Insert a valid email address</string>
+    <string name="error_password">Password should be at least 6 characters</string>
+    <string name="check_login_data_message">Check the data you inserted</string>
+    <string name="error_login_user_message">There is no user record corresponding to this identifier</string>
+    <string name="error_login_password_message">The password is invalid</string>
+    <string name="error_user_collision_message">The email address is already in use by another account</string>
+    <string name="error_no_google_account_found_message">No Google accounts have been found</string>
+    <string name="user_data_retrieving_message">Retrieving of user data in progress</string>
+    <string name="unexpected_error">Unexpected error</string>
+    <string name="start">START</string>
+    <string name="logout">Logout</string>
 </resources>
